<resources>
    <string name="app_name">WinWinDeal</string>
    <string name="username_hint">Tên đăng nhập</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="address_hint">Địa chỉ</string>
    <string name="address_warning">Xin vui lòng nhập vào địa chỉ nhận hàng.</string>
    <string name="phone_hint">Số điện thoại</string>
    <string name="login_cap_lbl">ĐĂNG NHẬP</string>
    <string name="login_or_lbl">-- Hay --</string>
    <string name="register_new_lbl">Đăng ký mới</string>
    <style name="register_cap_lbl"></style>
    <string name="username_empty_warning">Tên đăng nhập không được để trống.</string>
    <string name="password_empty_warning">Mật khẩu không được để trống.</string>
    <string name="username_wrong_warning">Sai tên đăng nhập.</string>
    <string name="password_wrong_warning">Sai mật khẩu.</string>
    <string name="ok_lbl">ĐỒNG Ý</string>
    <string name="cancel_lbl">HỦY</string>
    <string name="yes_lbl">CÓ</string>
    <string name="no_lbl">KHÔNG</string>
    <string name="message_error_server">Không thể kết nối với server.</string>
    <string name="register_cap_lbl">ĐĂNG KÝ</string>
    <string name="create_account_lbl">Tạo tài khoản</string>
    <string name="home_lbl">Trang chủ</string>
    <string name="about_me_lbl">Tôi</string>
    <string name="task_list_lbl">Đơn hàng</string>
    <string name="register_successfully">Đăng ký thành công, xin mời đăng nhập!</string>
    <string name="register_failed">Có lỗi khi đăng ký, xin vui lòng thử lại sau!</string>
    <string name="login_fail">Email hoặc mật khẩu không chính xác, vui lòng nhập lại!</string>
    <string name="network_connection_title">Kết nối</string>
    <string name="slow_network_warning">Không có kết nối Internet hoặc tốc độ quá chậm. Xin kiểm tra lại kết nối Wifi hoặc mạng dữ liệu di động!</string>
    <string name="close_cap_lbl">ĐÓNG</string>
    <string name="product_name_hint">Tên sản phẩm</string>
    <string name="product_code_hint">Mã sản phẩm</string>
    <string name="product_origin_hint">Xuất xứ</string>
    <string name="product_price_hint">Giá</string>
    <string name="product_price_lbl">Đơn giá : %s</string>
    <string name="product_thumbnail_hint">Link hình ảnh</string>
    <string name="description_hint">Mô tả sản phẩm</string>
    <string name="quantity_hint">Số lượng</string>
    <string name="create_product_successfully">Tạo sản phẩm thành công!</string>
    <string name="edit_product_successfully">Cập nhật sản phẩm thành công!</string>
    <string name="price_call">Giá : Liên hệ</string>
    <string name="order_now">Đặt hàng ngay</string>
    <string name="confirm_order">XÁC NHẬN ĐẶT HÀNG</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="cart_lbl">Giỏ hàng</string>
    <string name="alive_lbl">Còn hàng</string>
    <string name="out_of_stock">Hết hàng</string>
    <string name="deleted_product_lbl">Đã xóa</string>
    <string name="save_cap_lbl">LƯU</string>
    <string name="delete_cap_lbl">XÓA</string>
    <string name="user_manage">Quản lý người dùng</string>
    <string name="staff_lbl">Nhân viên</string>
    <string name="customer_lbl">Khách hàng</string>
    <string name="settings_lbl">Thiết lập</string>
    <string name="log_out_cap_lbl">ĐĂNG XUẤT</string>
    <string name="log_out_warning_message">Bạn có muốn thoát khỏi tài khoản?</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="contact_us">Liên hệ</string>
    <string name="order_history">Lịch sử đơn hàng</string>
    <string name="order_detail_lbl">Chi tiết đơn hàng</string>
    <string name="remove_product_order_warning">Bạn có muốn xóa sản phẩm này khỏi giỏ hàng?</string>
    <string name="user_not_active_warning_message">Tài khoản chưa được kích hoạt, vui lòng liên hệ Admin để được hỗ trợ vấn đề này!</string>
    <string name="data_empty">(chưa cập nhật)</string>
    <string name="crop_cap_lbl">CẮT HÌNH</string>
    <string name="select_source">Chọn nguồn ...</string>
    <string name="update_user_failed">Cập nhật không thành công!</string>
    <string name="update_user_successfully">Cập nhật thành công!</string>
    <string name="add_order_successfully">Tạo đơn hàng thành công! Xin vui lòng chờ ít phút, nhân viên kinh doanh sẽ liên hệ trực tiếp với quý khách!</string>
    <string name="add_order_failed">Tạo đơn hàng thất bại, xin vui lòng kiểm tra lại sản phẩm trong giỏ hàng.</string>
    <string name="account_status">Trạng thái tài khoản</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="working_area">Khu vực quản lý</string>
    <string name="order_stt_new">Mới tạo</string>
    <string name="order_stt_processing">Đang xử lý</string>
    <string name="order_stt_done">Hoàn thành</string>
    <string name="product_quantity">Số lượng :</string>
    <string name="update_order_failed">hết hàng. Cập nhật đơn hàng thất bại!</string>
    <string name="total_price_lbl">Tổng tiền : %s</string>
    <string name="delete_product_warning">Bạn có muốn xóa sản phẩm này?</string>
    <string name="log_out_confirm_message">Bạn có muốn thoát khỏi chương trình?</string>
</resources>
