<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:padding="40dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/winwindeal_logo"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:id="@+id/unameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/box_defocus_border"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:layout_width="@dimen/folder_icon_size"
            android:layout_height="wrap_content"
            android:src="@drawable/textbox_icon_email"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/unameEdt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_2"
            android:textColor="@color/colorTextView"
            android:textColorHint="@color/colorSubTextView"
            android:hint="@string/username_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:background="@color/transparent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/box_defocus_border"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="@dimen/folder_icon_size"
            android:layout_height="wrap_content"
            android:src="@drawable/textbox_icon_password"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/passEdt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_2"
            android:inputType="textPassword"
            android:textColor="@color/colorTextView"
            android:textColorHint="@color/colorSubTextView"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:imeOptions="actionGo"
            android:background="@color/transparent"/>
    </LinearLayout>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_border_selector"
        android:textSize="@dimen/text_size_2"
        android:textColor="@color/colorWhite"
        android:text="@string/login_cap_lbl"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_2"
        android:text="@string/login_or_lbl"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorTextView"/>
    <TextView
        android:id="@+id/registerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_1"
        android:text="@string/register_new_lbl"
        android:textColor="@drawable/register_text_color_selector"
        android:background="@color/transparent"
        android:elevation="1dp"/>
</LinearLayout>
