<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@color/colorWhite"
        android:elevation="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="40dp">
        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/TextView"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:background="@drawable/box_defocus_border"
            android:hint="@string/email_hint"
            android:textColorHint="@color/colorSubTextView"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/passEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/TextView"
            android:singleLine="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/colorSubTextView"
            android:background="@drawable/box_defocus_border"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/box_defocus_border"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp">
            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></Spinner>
        </LinearLayout>

        <EditText
            android:id="@+id/addressEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/TextView"
            android:singleLine="true"
            android:hint="@string/address_hint"
            android:textColorHint="@color/colorSubTextView"
            android:background="@drawable/box_defocus_border"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/box_defocus_border"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp">
            <Spinner
                android:id="@+id/districtSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></Spinner>
        </LinearLayout>
        <EditText
            android:id="@+id/phoneEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/TextView"
            android:singleLine="true"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textColorHint="@color/colorSubTextView"
            android:background="@drawable/box_defocus_border"
            android:layout_marginTop="10dp"
            android:imeOptions="actionGo"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_border_selector"
            android:textSize="@dimen/text_size_2"
            android:textColor="@color/colorWhite"
            android:text="@string/register_cap_lbl"
            android:gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</LinearLayout>
