<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@color/colorWhite"
        android:elevation="2dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <ImageView
                android:id="@+id/avatarImgv"
                android:layout_width="@dimen/avatar_width"
                android:layout_height="@dimen/avatar_width"
                android:src="@drawable/avatar"/>

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                style="@style/TextView"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:background="@drawable/box_defocus_border"
                android:hint="@string/email_hint"
                android:textColorHint="@color/colorSubTextView"
                android:layout_marginTop="20dp"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/addressEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                style="@style/TextView"
                android:singleLine="true"
                android:hint="@string/address_hint"
                android:textColorHint="@color/colorSubTextView"
                android:background="@drawable/box_defocus_border"
                android:layout_marginTop="10dp"
                android:imeOptions="actionNext"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/box_defocus_border"
                android:layout_marginTop="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="left">
                <Spinner
                    android:id="@+id/districtSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></Spinner>
            </LinearLayout>
            <EditText
                android:id="@+id/phoneEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                style="@style/TextView"
                android:singleLine="true"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:textColorHint="@color/colorSubTextView"
                android:background="@drawable/box_defocus_border"
                android:layout_marginTop="10dp"
                android:imeOptions="actionGo"/>
            <LinearLayout
                android:id="@+id/statusLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/box_defocus_border"
                android:layout_marginTop="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="left">
                <Spinner
                    android:id="@+id/statusSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></Spinner>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
